@@ -8,6 +8,7 @@ VERSION 1.1.5 (??? ?? ??:?? 2004)
 - Made /bin/rm the default way to delete directories
 - Removed redundant validation (re: intervals) in execution section
 - Exit 1 if we basically finish ok, but with some minor errors
+- Print PID in lockfile
 
 VERSION 1.1.4 (May 16 23:44 2004)
 ------------------------------------------------------------------------------
